testdata/test/resources/com/yafred/asn1/test/should-fail/sequence_duplicate_tag6.asn
-- FAILS: duplicate tag in extension

Sequence DEFINITIONS IMPLICIT TAGS ::= BEGIN

Root ::= SEQUENCE {
	un INTEGER,
	deux INTEGER OPTIONAL,
	...,
	trois BOOLEAN,
	...,
	quatre BOOLEAN
}



END